Fix for several UI issues including the collapse of menu.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,5 +1,5 @@
 /* Homepage styles */
-.home-wrapper.index-wrapper {
+.home-wrapper.pages-wrapper {
   .jumbotron-title,
   .jumbotron-subtitle {
     color: #000;
